--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 
                 </form>
             </div>
+            <p class="text-center" style="padding-top:10px;font-size:12px;color:#2c3e50;font-style:italic;">Created by <a href="https://twitter.com/AmirolAhmad" target="_blank">AmirolAhmad</a></p>
         </div>
 
           </div>
