--- a/index.html
+++ b/index.html
@@ -1,70 +1,134 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Bootstrap-calculator : Bootstrap Calculator" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap Calculator</title>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Bootstrap-calculator</title>
   </head>
-
   <body>
+    <div class="container">
+      <div class="price-box">
+        <div class="row">
+          <div class="col-sm-6">
+                <form class="form-horizontal form-pricing" role="form">
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/AmirolAhmad/Bootstrap-Calculator">View on GitHub</a>
+                  <div class="price-slider">
+                    <h4 class="great">Amount</h4>
+                    <span>Minimum $100K is required</span>
+                    <div class="col-sm-12">
+                      <div id="slider_amirol"></div>
+                    </div>
+                  </div>
+                  <div class="price-slider">
+                    <h4 class="great">Duration</h4>
+                    <span>Please choose one</span>
+                    <div class="btn-group btn-group-justified">
+                      <div class="btn-group btn-group-lg">
+                        <button type="button" class="btn btn-primary btn-lg btn-block month active-month selected-month" id='24month'>24 Months</button>
+                      </div>
+                      <div class="btn-group btn-group-lg">
+                        <button type="button" class="btn btn-primary btn-lg btn-block month" id='18month'>18 Months</button>
+                      </div>
+                      <div class="btn-group btn-group-lg">
+                        <button type="button" class="btn btn-primary btn-lg btn-block month" id='12month'>12 Months</button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="price-slider">
+                    <h4 class="great">Term</h4>
+                    <span>Please choose one</span>
+                      <input name="sliderVal" type="hidden" id="sliderVal" value='0' readonly="readonly" />
+                <input name="month" type="hidden" id="month" value='24month' readonly="readonly" />
+                <input name="term" type="hidden" id="term" value='quarterly' readonly="readonly" />
+                      <div class="btn-group btn-group-justified">
+                        <div class="btn-group btn-group-lg">
+                    <button type="button" class="btn btn-primary btn-lg btn-block term active-term selected-term" id='quarterly'>Quarterly</button>
+                  </div>
+                        <div class="btn-group btn-group-lg">
+                          <button type="button" class="btn btn-primary btn-lg btn-block term" id='monthly'>Monthly</button>
+                  </div>
+                        <div class="btn-group btn-group-lg">
+                          <button type="button" class="btn btn-primary btn-lg btn-block term" id='weekly'>Weekly</button>
+                        </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="price-form">
 
-          <h1 id="project_title">Bootstrap-calculator</h1>
-          <h2 id="project_tagline">Bootstrap Calculator</h2>
+                  <div class="form-group">
+                      <div class="row">
+                        <div class="col-sm-6">
+                          <label for="amount_amirol" class="control-label">Annually ($): </label>
+                          <span class="help-text">Amount that you need to pay</span>
+                        </div>
+                        <div class="col-sm-6">
+                            <input type="hidden" id="amount_amirol" class="form-control">
+                            <!-- <p class="price lead" id="total"></p> -->
+                            <input class="price lead" name="totalprice" type="text" id="total" disabled="disabled" style="" />
+                        </div>
+                    </div>
+                    </div>
+                    <div class="form-group">
+                      <div class="row">
+                        <div class="col-sm-6">
+                          <label for="amount_amirol" class="control-label">Monthly ($): </label>
+                          <span class="help-text">Amount that you need to pay</span>
+                        </div>
+                        <div class="col-sm-6">
+                            <input type="hidden" id="amount_amirol" class="form-control">
+                            <!-- <p class="price lead" id="total12"></p> -->
+                            <input class="price lead" name="totalprice12" type="text" id="total12" disabled="disabled" style="" />
+                        </div>
+                    </div>
+                    </div>
+                    <div class="form-group">
+                      <div class="row">
+                        <div class="col-sm-6">
+                          <label for="amount_amirol" class="control-label">Weekly ($): </label>
+                          <span class="help-text">Amount that you need to pay</span>
+                        </div>
+                        <div class="col-sm-6">
+                            <input type="hidden" id="amount_amirol" class="form-control">
+                            <!-- <p class="price lead" id="total52"></p> -->
+                            <input class="price lead" name="totalprice52" type="text" id="total52" disabled="disabled" style="" />
+                        </div>
+                    </div>
+                    </div>
+                    <div style="margin-top:30px"></div>
+                    <hr class="style">
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/AmirolAhmad/Bootstrap-Calculator/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/AmirolAhmad/Bootstrap-Calculator/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+                  <div class="form-group">
+                      <div class="col-sm-12">
+                        <button type="submit" class="btn btn-primary btn-lg btn-block">Proceed <span class="glyphicon glyphicon-chevron-right"></span></button>
+                      </div>
+                  </div>
+                    <div class="form-group">
+                      <div class="col-sm-12">
+                          <img src="images/payment.png" class="img-responsive payment" />
+                      </div>
+                    </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>
-<a name="bootstrap-calculator" class="anchor" href="#bootstrap-calculator"><span class="octicon octicon-link"></span></a>Bootstrap Calculator</h1>
+                  </div>
 
-<h2>
-<a name="description" class="anchor" href="#description"><span class="octicon octicon-link"></span></a>Description</h2>
+                </form>
+            </div>
+            <p class="text-center" style="padding-top:10px;font-size:12px;color:#2c3e50;font-style:italic;">Created by <a href="https://twitter.com/AmirolAhmad" target="_blank">AmirolAhmad</a></p>
+        </div>
 
-<p>Bootstrap Calculator</p>
+          </div>
 
-<h2>
-<a name="website-development" class="anchor" href="#website-development"><span class="octicon octicon-link"></span></a>Website Development</h2>
+      </div>
 
-<ul>
-<li><a href="http://amirolahmad.github.io/bootstrap-calculator/">http://amirolahmad.github.io/bootstrap-calculator/</a></li>
-</ul><h2>
-<a name="authors" class="anchor" href="#authors"><span class="octicon octicon-link"></span></a>Authors</h2>
 
-<ul>
-<li><a href="https://twitter.com/amirolahmad">https://twitter.com/amirolahmad</a></li>
-</ul><h2>
-<a name="copyright-and-license" class="anchor" href="#copyright-and-license"><span class="octicon octicon-link"></span></a>Copyright and license</h2>
-
-<p>Copyright 2013 Instajob under <a href="LICENSE">the Apache 2.0 license</a>.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Bootstrap-calculator maintained by <a href="https://github.com/AmirolAhmad">AmirolAhmad</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
+    <script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
